--- a/style.css
+++ b/style.css
@@ -1,3 +1,148 @@
-h1 {
-  color: blue;
+* {
+  /* outline: 1px solid red; */
+}
+
+body {
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: 900;
+  text-align: center;
+}
+
+.header {
+  background-color: #1f2937;
+  color: whitesmoke;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 100px;
+}
+
+.left-header {
+  font-size: 24px;
+  font-weight: 800;
+}
+
+.right-header {
+  display: flex;
+  gap: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.title {
+  background-color: #1f2937;
+  color: whitesmoke;
+  display: flex;
+  padding: 100px;
+}
+
+.title-left {
+  padding: 0 50px 50px 0px;
+}
+
+.title-right {
+  background-color: #7d7e7e;
+  width: 400px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+button {
+  background-color: #3882f6;
+  color: whitesmoke;
+  border: 0px solid;
+  border-radius: 6px;
+  padding: 4px 24px;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: nowrap;
+  padding: 25px 200px 75px 200px;
+}
+
+.container {
+  display: flex;
+  gap: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.square {
+  border: 2px solid;
+  border-color: #3882f6;
+  border-radius: 6px;
+  width: 125px;
+  height: 125px;
+}
+
+.card-text {
+  text-align: center;
+}
+
+.quote {
+  background-color: #e5e7eb;
+  padding: 50px 200px;
+}
+
+.quote-text1 {
+  font-style: italic;
+  font-weight: lighter;
+  font-size: 28px;
+}
+
+.quote-text2 {
+  font-weight: 800;
+  font-size: 20px;
+  text-align: end;
+}
+
+.call {
+  background-color: #3882f6;
+  margin: 100px;
+  border-radius: 6px;
+  padding: 50px 100px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.call-button {
+  border-color: white;
+  border-width: 2px;
+}
+
+.call-big {
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.footer {
+  background-color: #1f2937;
+  color: whitesmoke;
+  text-align: center;
+  padding: 25px 0;
 }
